--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ingluise.ProyectoMinTICCiclo4">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,10 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoMinTICCiclo4">
         <activity
-            android:name=".WebViewActivity"
+            android:name=".ListViewActivity"
             android:exported="false" />
         <activity
-            android:name=".EncuestaActivity"
+            android:name=".WebViewActivity"
             android:exported="false" />
         <activity
             android:name=".VerticalScrollViewActivity"
@@ -34,7 +37,7 @@
             android:name=".SplashScreen"
             android:exported="false" />
         <activity
-            android:name=".ListViewActivity"
+            android:name=".EncuestaActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
